--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.4"
   },
   "scripts": {
-    "production": "nodemon app.js",
+    "production": "node app.js",
     "development": "nodemon app.js"
   },
   "devDependencies": {
+    "cors": "^2.8.5",
+    "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2"
   }
 }
